
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_yamactiveleader"
version = "0.1.0"
description = "LeRobot teleop device"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Justin Yu", email = "yujustin@berkeley.edu" }
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "transforms3d",
  "lerobot",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_yamactiveleader*"]
exclude = ["*.egg-info"]
